--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
   shared_preferences: ^2.0.15
   sqflite: ^2.2.0+3
   path_provider: ^2.0.11
